# blink-idle-rpg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ASYNC_ENGINE_VERIFICATION.md  CHANGELOG.md  DOCKER.md  DOCKER_VERIFICATION.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_PLAN.md  LANGUAGE_CHANGES_2026-01-11.md  MIGRATION_COMPLETE_STATUS.md  MIGRATION_STATUS.md  Makefile  README.md  REGEX_MIGRATION_GUIDE.md  RELEASE_NOTES.md  TESTING.md  docker-build-with-prebuilt.sh  docker-compose.yml  docker-entrypoint.sh  docker-test-entrypoint.sh  hielements.hie  package-lock.json  package.json  run-docker-tests.ps1  test-simple-engine.html  test_compile.js  trace_game.js
.github/: DEPLOYMENT.md
agent-changelog/: 2024-12-31-documentation-expansion.md  2024-12-31-engine-independence.md  2026-01-01-externalize-docker-volumes.md  2026-01-01-use-project-root-for-docker-volumes.md  2026-01-02-fix-hero-selection-deployment.md  2026-01-02-game-logic-migration-analysis.md  2026-01-02-github-pages-workflow.md  2026-01-02-recurring-events.md  2026-01-02-recurring-retargeting.md  2026-01-02-watchdog-event-system.md  2026-01-03-bcl-customization-gui.md  2026-01-03-bcl-function-resolution.md  2026-01-03-bdl-implementation.md  2026-01-03-bdl-ir-integration.md  2026-01-03-data-loading-review.md  2026-01-03-fix-devmode-build-error.md  2026-01-03-integrated-ide-debug.md  2026-01-03-ir-runtime-loading.md  2026-01-03-ir-source-map.md  2026-01-03-remove-hero-fallback.md  2026-01-04-add-enemy-compendium.md  2026-01-04-bcl-resolution-implementation.md  2026-01-04-drop-tracker-feature.md  2026-01-04-fix-github-pages-readme-deployment.md  2026-01-04-fix-hero-loading-initialization.md  2026-01-04-include-bdl-for-ir-support.md  2026-01-04-integrate-bound-functions-html-bdl.md  2026-01-04-load-game-rules-bcl-from-files.md  2026-01-04-todo-list.md  2026-01-04_remove-named-entities.md  2026-01-05-convert-ui-spawning-to-brl.md  2026-01-05-enable-source-map-in-demo.md  2026-01-05-entity-cloning-feature.md  2026-01-05-final-summary.md  2026-01-05-fix-brl-syntax-errors.md  2026-01-05-fix-game-config-bdl.md  2026-01-05-fix-game-start-and-wave-spawning.md  (+24 more)
doc/: README.md  (+18 more)
src/compiler/: .gitignore  Cargo.toml  README.md
src/compiler/src/: lib.rs  main.rs  wasm.rs
src/compiler/src/analyzer/: mod.rs
src/compiler/src/ir/: mod.rs
src/compiler/src/lexer/: mod.rs
src/compiler/src/parser/: mod.rs
src/compiler/tests/: language_tests.rs
(+269 files in other folders)
