[package]
name = "blink-compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler for Blink Rule Language (BRL) - produces IR for Blink engines"
license = "MIT"
repository = "https://github.com/ercasta/blink-idle-rpg"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "blink_compiler"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "blink-compiler"
path = "src/main.rs"

[dependencies]
# Parsing
logos = "0.14"           # Fast lexer generator
# Note: chumsky may be used in the future for more complex parsing with better error recovery
# chumsky = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "1.0"
miette = { version = "7.2", features = ["fancy"] }

# Utilities
indexmap = { version = "2.2", features = ["serde"] }

# WASM support
wasm-bindgen = "0.2.95"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console_error_panic_hook", "wee_alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.38", features = ["json"] }
